--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "@testing-library/user-event": "^13.2.1",
     "firebase": "^9.9.0",
     "firebase-tools": "^11.2.0",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-i18next": "^12.2.2",
     "react-loading-spin": "^2.1.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
